# mobiliaria

./: README.md  main.py  mobiliario.db  pyproject.toml
mobiliaria/backend/: bancoDeDados.py  main.py
mobiliaria/backend/Banco/: open_db_connection.py
mobiliaria/backend/Model/: cliente.py  fornecedor.py  pedido.py  produto.py
mobiliaria/backend/Model/utils/: gerar_sql_insert.py
mobiliaria/pages/: __init__.py  base_page.py
mobiliaria/pages/clientes/: page_atualizar_cliente.py  page_busca_clientes.py  page_clientes.py  page_criar_cliente.py  page_deletar_cliente.py
mobiliaria/pages/fornecedores/: page_atualizar_fornecedor.py  page_buscar_fornecedores.py  page_criar_fornecedor.py  page_deletar_fornecedor.py  page_fornecedores.py
mobiliaria/pages/pedidos/: page_atualizar_pedido.py  page_buscar_pedidos.py  page_criar_pedido.py  page_deletar_pedido.py  page_grafico.py  page_pedidos.py
mobiliaria/pages/produtos/: page_atualizar_produto.py  page_buscar_produtos.py  page_criar_produto.py  page_deletar_produto.py  page_grafico_produto.py  page_produto.py
