[tool.poetry]
name = "mobiliaria"
version = "0.1.0"
description = ""
authors = ["ivansantiagojr <ivansantiago.junior@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sv-ttk = "^2.4"
matplotlib = "^3.6.2"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
